[package]
name = "gyro"
version = "0.0.1"
authors = ["Yu Jing <yuikns@users.noreply.github.com>"]

description = "a set of utils for machine learning"

# These URLs point to more information about the repository
documentation = "https://github.com/argcv/gyro-rs/blob/master/README.md"
homepage = "https://github.com/argcv/gyro-rs/blob/master/README.md"
repository = "https://github.com/argcv/gyro-rs.git"

# This points to a file in the repository (relative to this Cargo.toml). The
# contents of this file are stored and indexed in the registry.
readme = "README.md"

# This is a small list of keywords used to categorize and search for this
# package.
keywords = ["gyro"]

# This is a string description of the license for this package. Currently
# crates.io will validate the license provided against a whitelist of known
# license identifiers from http://spdx.org/licenses/. Multiple licenses can
# be separated with a `/`
license = "MIT/Apache-2.0"

# If a project is using a nonstandard license, then this key may be specified in
# lieu of the above key and must point to a file relative to this manifest
# (similar to the readme key)
#license-file = "LICENSE"

[dependencies]
toml = "0.7"
clap = "4.3"

